trying to fix siema on mobile 12

--- a/src/components/section-categories/categories-styles/category.css
+++ b/src/components/section-categories/categories-styles/category.css
@@ -173,6 +173,8 @@
   }
 
   .things-list {
+    -ms-touch-action: pan-y;
+    touch-action: pan-y;
     box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
   }
 }
